--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">HackUTT est le club de sécurité de l'Université de Technologie de Troyes (UTT). Directement rattaché à l'UTT Net Group, l'objectif est de réunir l'ensemble des passionnés de cybersécurité.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">Au programme: CTFs (Capture the Flag), Conférences, Challenges en tout genre, Workshops organisés par les membres du staff et bien d'autres projets proposés à tout niveau, du plus petit Script Kiddies au H4x0r le plus root.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Au programme: CTFs (Capture the Flag), Conférences, Challenges en tout genre, Workshops organisés par les membres du staff et bien d'autres projets proposés à tout niveau, du plus petit Script Kiddie au H4x0r le plus root.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -174,7 +174,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Adresse</h4>
                         <p class="lead mb-0">
-                            Université de Technologie de Troyes
+                            Université de Technologie de Troyes<br />
                             12 rue Marie Curie
                             <br />
                             10000 Troyes
