Contact details added + minor fixes

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="container">
                     <div class="row">
                         <p class="lead">Pour nous contacter, 2 possibilités: tu peux passer en salle associative (N102), il y aura très certainement du monde pour te recevoir et répondre à tes questions.</p>
-                        <p class="lead">Sinon, tu peux nous joindre directement via notre adresse E-mail: <a href="mailto:hackutt@utt.fr">hackutt@utt.fr</a></p>
+                        <p class="lead">Sinon, tu peux nous joindre directement via notre adresse E-mail: <a href="mailto:hackutt@utt.fr">hackutt@utt.fr</a> ou par message privé sur Instagram: <a href="https://www.instagram.com/h4ckutt/">@H4ckutt</a> !</p>
                 </div>
             </div>
         </section>
@@ -177,7 +177,7 @@
                             Université de Technologie de Troyes<br />
                             12 rue Marie Curie
                             <br />
-                            10000 Troyes
+                            10.000 Troyes
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -190,7 +190,7 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">À Propos de HackUTT</h4>
                         <p class="lead mb-0">
-                            HackUTT est le club de sécurité de l'Université de Technologie de Troyes. Géré avec amour par des étudiants pour des étudiants.
+                            HackUTT est le club de sécurité de l'Université de Technologie de Troyes. <br />Géré avec amour par des étudiants pour des étudiants.
                         </p>
                     </div>
                 </div>
@@ -277,7 +277,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Partenariat.jpg" alt="Partenariat Image" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Nous essayons également d'établir des liens avec d'autres personnes/associations avec qui nous partageons la même passion. Ainsi, quelques évènements sont prévus avec les associations d'autres écoles d'Ingénieur tel que Telecom Nancy ou encore l'IMT Atlantique.</p>
+                                    <p class="mb-4">Nous essayons également d'établir des liens avec d'autres personnes/associations avec qui nous partageons la même passion. Ainsi, quelques évènements sont prévus avec les associations d'autres écoles d'Ingénieur, plus d'informations sont à venir...</p>
                                 </div>
                             </div>
                         </div>
