--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DN42.png" alt="DN42 Logo" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Un des projets mis en place également consiste en l'élaboration d'un Hackerspace DN42 à l'échelle de notre club. Le but étant de travailler sur des technologie réseau difficilement manipulable dans la vie quotidienne (AS, BGP, ...) et d'être raccorder à ce grand réseau pour faciliter, à long terme et si besoin, les communications entre hackerspaces.</p>
+                                    <p class="mb-4">Un autre projet, en cours d'implémentation, consiste en l'élaboration d'un Hackerspace DN42 à l'échelle de notre club. Le but étant de travailler sur des technologies réseau difficilement manipulables dans la vie quotidienne (AS, BGP, ...) et d'être raccorder à ce grand réseau pour faciliter, à long terme et si besoin, les communications entre hackerspaces.</p>
                                 </div>
                             </div>
                         </div>
